--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "dotenv": "^16.4.7",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
