--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ GOOGLE_CLIENT_SECRET=votre_client_secret
 # Github OAuth configuration
 GITHUB_CLIENT_ID=votre_client_id
 GITHUB_CLIENT_SECRET=votre_client_secret
+
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
