add authentication route guards, improve navigation handling, and implement error pages for 403 and 404; update layout and styles

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,13 +4,13 @@ WORKDIR /app
 
 # Copier les fichiers de configuration
 COPY package.json ./
-COPY frontend/vite.config.js ./
+COPY vite.config.ts ./
 
 # Installer les dépendances
 RUN npm install
 
 # Copier le reste du code
-COPY frontend .
+COPY . .
 
 EXPOSE 5173
 
