Add production Docker configuration with Nginx reverse proxy
- Add production Dockerfiles for frontend/backend
- Add docker-compose.production.yml for deployment
- Add Nginx configuration for cats-voting subdomains
- Update environment configuration

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ GITHUB_CLIENT_ID=votre_client_id
 GITHUB_CLIENT_SECRET=votre_client_secret
 
 # Frontend URL
-FRONTEND_URL=http://localhost:5173
+VITE_API_URL=http://localhost:5173
