--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,7 @@ http {
         server frontend:80;
     }
 
-    # Serveur pour l'application frontend cats-voting
+    # HTTP - Serveur pour l'application frontend cats-voting
     server {
         listen 80;
         server_name cats-voting.riadhben.com;
@@ -71,7 +71,7 @@ http {
         }
     }
 
-    # Serveur pour l'API cats-voting
+    # HTTP - Serveur pour l'API cats-voting
     server {
         listen 80;
         server_name cats-voting-api.riadhben.com;
@@ -80,6 +80,84 @@ http {
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
         }
+
+        # API Backend - toutes les routes
+        location / {
+            limit_req zone=api burst=20 nodelay;
+
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+
+            # CORS Headers
+            add_header 'Access-Control-Allow-Origin' 'https://cats-voting.riadhben.com' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'https://cats-voting.riadhben.com';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+        }
+    }
+
+    # HTTPS - Configuration pour cats-voting app
+    server {
+        listen 443 ssl http2;
+        server_name cats-voting.riadhben.com;
+
+        ssl_certificate /etc/letsencrypt/live/cats-voting.riadhben.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cats-voting.riadhben.com/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256;
+        ssl_prefer_server_ciphers off;
+
+        # Frontend React - toute l'application
+        location / {
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Cache des assets statiques
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            proxy_pass http://frontend;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+
+    # HTTPS - Configuration pour cats-voting API
+    server {
+        listen 443 ssl http2;
+        server_name cats-voting-api.riadhben.com;
+
+        ssl_certificate /etc/letsencrypt/live/cats-voting-api.riadhben.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cats-voting-api.riadhben.com/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256;
+        ssl_prefer_server_ciphers off;
 
         # API Backend - toutes les routes
         location / {
